...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEw-8h-xf7">
                                                    <rect key="frame" x="342" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="KhD-WX-Mkk"/>
                                                        <constraint firstAttribute="width" constant="44" id="iqL-hL-nEh"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_of_Unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="wx2-mw-Bgj">
                                <rect key="frame" x="171" y="407" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jdC-Nn-VCH">
                                <rect key="frame" x="16" y="702" width="370" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="VS1-GN-nsu"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" red="0.1333333333" green="0.14117647059999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <rect key="frame" x="0.0" y="106" width="402" height="4"/>
                                <color key="progressTintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="tP4-ML-jz4"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="stZ-Dn-k1c" secondAttribute="trailing" id="88f-5g-lDX"/>
                            <constraint firstItem="stZ-Dn-k1c" firstAttribute="top" secondItem="tP4-ML-jz4" secondAttribute="top" id="IFB-pk-IRn"/>
                            <constraint firstItem="tP4-ML-jz4" firstAttribute="trailing" secondItem="zhk-ql-W5f" secondAttribute="trailing" id="Svc-0Y-F2w"/>
                            <constraint firstItem="stZ-Dn-k1c" firstAttribute="leading" secondItem="5Jc-Hz-fGB" secondAttribute="leading" id="Umw-WX-vqE"/>
                            <constraint firstItem="zhk-ql-W5f" firstAttribute="top" secondItem="tP4-ML-jz4" secondAttribute="top" id="XW5-Nj-PEm"/>
...
